--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.15",
     "next": "11.1.2",
     "react": "17.0.2",
